// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CantDeleteTemplateAlert extraConfirm option should render a confirm input 1`] = `
<Modal
  className=""
  isOpen={false}
  type="danger"
  zIndex={99}
>
  <Body>
    <h4>
      <Translate>
        Confirm action
      </Translate>
    </h4>
    <p>
      <Translate
        translationKey=""
      >
        Are you sure you want to continue?
      </Translate>
    </p>
    <p>
      <Translate>
        If you want to continue, please type
      </Translate>
       '
      CONFIRM
      '
       
    </p>
    <input
      onChange={[Function]}
      type="text"
      value=""
    />
  </Body>
  <Footer>
    <button
      className="btn btn-default cancel-button"
      onClick={[Function]}
      type="button"
    >
      <Translate>
        Cancel
      </Translate>
    </button>
    <button
      className="btn confirm-button btn-danger"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <Translate>
        Accept
      </Translate>
    </button>
  </Footer>
</Modal>
`;

exports[`CantDeleteTemplateAlert noCancel option should hide the cancel button 1`] = `
<Modal
  className=""
  isOpen={false}
  type="danger"
  zIndex={99}
>
  <Body>
    <h4>
      <Translate>
        Confirm action
      </Translate>
    </h4>
    <p>
      <Translate
        translationKey=""
      >
        Are you sure you want to continue?
      </Translate>
    </p>
  </Body>
  <Footer>
    <button
      className="btn confirm-button btn-danger"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <Translate>
        Accept
      </Translate>
    </button>
  </Footer>
</Modal>
`;
